--- a/wp-content/themes/wp-dashboard/html/src/index.html
+++ b/wp-content/themes/wp-dashboard/html/src/index.html
@@ -21,7 +21,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 </head>
 <body class="administrator">
-	<div class="extraCss max-h-full text-center xl:pr-8 uppercase cursor-default text-black font-semibold xl:mb-8 2xl:mb-8 xl:mt-0 2xl:pt-10"></div>
+	<div class="extraCss max-h-full text-center xl:pr-8 uppercase cursor-default text-black font-semibold xl:mb-8 2xl:mb-8 xl:mt-0 2xl:pt-10 justify-end"></div>
 
 
     <header class="fixed top-0 left-0 z-20 flex w-full bg-neutral-100 h-12 text-primary">
@@ -58,19 +58,6 @@
 						
 					<ul class="left-nav xl:pt-4 xl:mb-20" id="mainNav">
 						<li class="aa-student"><a href="#">Aktuality</a></li>
-						<li class="aa-student"><a href="#">Aktuality</a></li>
-						<li class="aa-student"><a href="#">Aktuality</a></li>
-						<li class="aa-student"><a href="#">Aktuality</a></li>
-						<li><a href="#">Zamestnanecký portál</a></li>
-						<li><a href="#">Zamestnanecký portál</a></li>
-						<li><a href="#">Zamestnanecký portál</a></li>
-						<li><a href="#">Zamestnanecký portál</a></li>
-						<li><a href="#">Zamestnanecký portál</a></li>
-						<li><a href="#">Onboarding</a></li>
-						<li><a href="#">Onboarding</a></li>
-						<li><a href="#">Onboarding</a></li>
-						<li><a href="#">Onboarding</a></li>
-						<li><a href="#">Onboarding</a></li>
 						<li class="align-middle current-menu-parent menu-item-has-children"><a href="#">Užitočné informácie</a>
 							<ul class="sub-menu">
 								<li class="aa-tpp"><a href="#">Dovolenky</a></li>
@@ -89,6 +76,19 @@
 								<li><a href="#">Užitočné kontakty</a></li>
 							</ul>
 						</li>
+						<li class="aa-student"><a href="#">Aktuality</a></li>
+						<li class="aa-student"><a href="#">Aktuality</a></li>
+						<li class="aa-student"><a href="#">Aktuality</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Zamestnanecký portál</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
+						<li><a href="#">Onboarding</a></li>
 						<li class="menu-item-has-children"><a href="#">Zoho</a>
 							<ul>
 								<li><a href="#">ZOHO manuál + info o zohosupport</a></li>
@@ -98,6 +98,12 @@
 						<li><a href="#">Vzdelávanie</a></li>
 						<li><a href="#">Benefity</a></li>
 						<li><a href="#">Teambuildingy</a></li>
+						<li class="menu-item-has-children"><a href="#">Zoho</a>
+							<ul>
+								<li><a href="#">ZOHO manuál + info o zohosupport</a></li>
+								<li><a href="#">Manuály pre adminov</a></li>
+							</ul>
+						</li>
 						<li><a href="#">AA bazoš</a></li>
 					</ul>
 
@@ -129,8 +135,8 @@
 		</aside>
 
 		<main class="relative flex-1 min-h-[85vh] xl:ml-60 px-4 xl:px-16 pt-20">
-			<div class="hidden fixed left-60 top-12 z-10 flex flex-col justify-center pt-8 xl:w-60 xl:h-screen bg-transparent overflow-auto pb-16" id="mainSubNavWrap">
-				<ul class="py-36 mt-3 bg-green" id="mainSubNav"></ul>
+			<div class="hidden fixed left-60 top-12 z-10 flex flex-col justify-start pt-8 xl:w-60 xl:h-screen bg-transparent overflow-auto pb-16" id="mainSubNavWrap">
+				<ul class="py-4 mt-3 bg-green" id="mainSubNav"></ul>
 			</div>
 
 			<div class="mb-8">
